<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id">5000371686667096</string>
    <string name="fb_login_protocol_scheme">fb5000371686667096</string>
    <string name="facebook_client_token">dbb08b348d22dfd6f41cddd4c8f49486</string>

    <string name="app_name">Violympic</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="enter_old_password">Nhập mật khẩu cũ</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="enter_new_password">Nhâp mật khẩu mới</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_new_password">Nhâp lại mật khẩu mới</string>
    <string name="edit_info">Chỉnh sửa thông tin</string>
    <string name="personnal_info">Thông tin cá nhân</string>
    <string name="full_name">Họ và tên</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="save">Lưu</string>
    <string name="account">Tài khoản</string>
    <string name="delete_account">Xóa tài khoản</string>
    <string name="login">Đăng nhập</string>
    <string name="login_admin">Đăng nhập tư cách Admin</string>
    <string name="email_or_username">Email hoặc tên tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="login_with">Đăng nhập với:</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="don_t_have_an_account">Chưa có tài khoản?</string>
    <string name="register_now">Đăng ký ngay!</string>
    <string name="register">Đăng ký</string>
    <string name="follow">Theo dõi</string>
    <string name="likes">Lượt thích</string>
    <string name="followers">Người theo dõi</string>
    <string name="following">Đang theo dõi</string>
    <string name="comment">Bình luận</string>
    <string name="username">Tên tài khoản</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="back">Trở lại</string>
    <string name="next">Tiếp tục</string>
    <string name="notification">Thông báo</string>
    <string name="enter_video_content">Nhập mô tả video</string>
    <string name="post">Đăng</string>
    <string name="not_login_in_profile_fragment">Bạn chưa đăng nhập!\nHãy đăng nhập để sử dụng tính năng này!</string>
    <string name="or">hoặc</string>
    <string name="search">Tìm kiếm</string>
    <string name="search_not_found">Không tìm thấy! :((</string>
    <string name="delete">Xóa</string>
    <string name="reply">Trả lời</string>
    <string name="copy">Sao chép</string>
    <string name="share">Chia sẻ</string>
    <string name="logout">Đăng xuất</string>
    <string name="report">Báo cáo</string>
    <string name="already_have_an_account">Bạn đã có tài khoản?</string>
    <string name="login_now">Đăng nhập ngay!</string>
    <string name="admin">Quản trị viên</string>
    <string name="dashboard">Bảng điều khiển</string>
    <string name="admin_panel">Trang quản trị</string>
    <string name="exit_confirm">Bạn có chắc chắn muốn thoát?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="search_video_or_user">Tìm kiếm video hoặc người dùng</string>
    <string name="edit_profile">Chỉnh sửa thông tin</string>
    <string name="number_of_new_views">Lượt xem mới</string>
    <string name="number_of_new_likes">Lượt thích mới</string>
    <string name="number_of_new_comments">Bình luận mới</string>
    <string name="number_of_new_videos">Video mới</string>
    <string name="number_of_new_users">Người dùng mới</string>
    <string name="number_of_new_reports">Báo cáo mới</string>
    <string name="statistic_in_week">Thống kê 7 ngày gần nhất</string>
    <string name="today">Hôm nay</string>
    <string name="month">Tháng</string>
    <string name="year">Năm nay</string>
    <string name="all_time">Tất cả</string>
    <string name="statistic_month">Thống kê trong tháng này</string>
    <string name="statistic_year">Thống kê trong năm nay</string>
    <string name="statistic_all_time">Thống kê tất cả</string>
    <string name="users">Người dùng</string>
    <string name="comments">Bình luận</string>
    <string name="videos">Videos</string>
    <string name="filter">Lọc:</string>
    <string name="role">Quyền</string>
    <string name="number_of_views">Lượt xem</string>
    <string name="number_of_likes">Lượt thích</string>
    <string name="number_of_comments">Lượt bình luận</string>
    <string name="date_upload">Ngày tải lên</string>
    <string name="content">Nội dung</string>

    <string name="ct_header">header</string>
    <string name="itv_id_topic">Mã đề: #%s</string>
    <string name="itv_subject">Bộ môn: %s</string>
    <string name="itv_grade_th">Dành cho học sinh từ lớp %s trở lên</string>
</resources>