<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/ct_header"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/demo_header" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="-24dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="email"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="name"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/full_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="phone"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:drawablePadding="8dp"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="email"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegister"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_background"
                    android:drawableEnd="@drawable/ic_login"
                    android:drawablePadding="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/register"
                    android:textColor="@color/main_color"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:elevation="100dp"
                    android:indeterminateBehavior="repeat"
                    android:indeterminateTint="@color/main_color"
                    android:visibility="gone" />
            </FrameLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtRegister" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/login_now"
            android:textColor="@color/secondary_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView3" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>