<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/ct_header"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/demo_header" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="1"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="username"
        android:drawableStart="@drawable/ic_baseline_email_32"
        android:drawablePadding="8dp"
        android:fontFamily="@font/varela_round"
        android:hint="@string/email_or_username"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_baseline_lock_32"
        android:drawablePadding="8dp"
        android:fontFamily="@font/varela_round"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUsername" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background"
        android:drawableEnd="@drawable/ic_login"
        android:drawablePadding="8dp"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/login"
        android:textColor="@color/main_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/loginGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="-24dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDemoAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_background_admin"
        android:drawablePadding="8dp"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/login_admin"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/txtRegister" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/varela_round"
            android:text="@string/register_now"
            android:textColor="@color/secondary_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView3" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_with"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <ImageView
        android:id="@+id/loginGoogle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/ic_google" />

    <ImageView
        android:id="@+id/loginFacebook"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/loginGoogle"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/ic_facebook" />

    <!--    <com.facebook.login.widget.LoginButton-->
    <!--        android:id="@+id/loginFacebook_button"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="center_horizontal"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:visibility="gone"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/loginFacebook"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/loginFacebook" />-->

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/secondary_color"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/loginGoogle"
        app:layout_constraintTop_toBottomOf="@+id/loginGoogle" />

    <!--    <com.github.angads25.toggle.widget.LabeledSwitch-->
    <!--        android:id="@+id/sw_language"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:textSize="14sp"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/textView2"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/txt_email"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/textView2"-->
    <!--        app:on="false" />-->

</androidx.constraintlayout.widget.ConstraintLayout>