<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvIdTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/itv_id_topic"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="50dp"
        app:cardElevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIdTopic">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/ic_math" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/itv_subject"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toBottomOf="@id/tvIdTopic" />

    <TextView
        android:id="@+id/tvGradeTh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/itv_grade_th"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toBottomOf="@id/tvSubject" />

    <TextView
        android:id="@+id/tvStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Thời gian mở làm bài: 10:32 12.12.2024"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGradeTh" />

    <TextView
        android:id="@+id/tvEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="Thời gian kết thúc làm bài: 10:32 12.12.2024"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStartTime" />

    <TextView
        android:id="@+id/tvTestTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="Thời gian làm bài: 3 phút"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEndTime" />

    <TextView
        android:id="@+id/tvTotalQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Tổng số câu hỏi: 10"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvTestTime"
        app:layout_constraintTop_toBottomOf="@id/tvTestTime" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/btnDisable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalQuestion" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDisable"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background_disable"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="Vô hiệu hoá"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4" />
</androidx.constraintlayout.widget.ConstraintLayout>